worked more on the javascript parts

--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
             <div id="inputArea">
                 <input type="text" id="input" placeholder="enter task">
                 <button id="addbtn">Add</button>
+                <p id="message"></p>
             </div>
                <ul id="taskList">
             </ul>
