--- a/home.html
+++ b/home.html
@@ -25,20 +25,16 @@
         <dialog id="edit-dialog">
              <h2>Edit Task</h2>
              <div>
-                <label for="edit-title">Title:</label>
-                <input type="text" id="edit-title-input">
+                <input type="text" id="edit-title-input" placeholder="Task Title">
             </div>
              <div>
                 <label for="edit-date">Date:</label>
                 <input type="date" id="edit-date-input">
-           </div>
-             <div>
                 <label for="edit-time">Time:</label>
                 <input type="time" id="edit-time-input">
             </div>
              <div>
-                <label for="edit-task">Task:</label>
-                <textarea id="edit-textarea"></textarea>
+                <textarea id="edit-textarea" placeholder="Task description"></textarea>
            </div>
            <button id="save-edit-btn">Save</button>
            <button id="cancel-edit-btn">Cancel</button>
